--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,17 +1,3 @@
 /build
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/captures
-.externalNativeBuild
-.cxx
-local.properties
-# Ignorar el archivo google-services.json de Firebase
 app/google-services.json
+/google-services.json
